Fix column & row classes init order, remove odd $gap*2 multiplication

--- a/core/_css-grid.scss
+++ b/core/_css-grid.scss
@@ -31,7 +31,7 @@
     }
   }
   @else if $element==row-gutter {
-    margin-#{$_left}: -$gap-width * 2;
+    margin-#{$_left}: -$gap-width;
   }
 
   // Column Types
@@ -59,7 +59,7 @@
     }
   }
   @else if $element==column-gutter {
-    padding-#{$_left}: $gap-width * 2;
+    padding-#{$_left}: $gap-width;
   }
 
   // Column Manipulators
@@ -153,9 +153,35 @@
   }
   //@debug $params, $set, $map;
 
+ // Base classes
+  // -------------------------
+  @if index($set, column) and $map {
+    // row
+    ._row { @include _g($type, _row); }
+    // gutter row mode
+    @if index($rows, gutter) {
+      ._gutter { position: relative; }
+    }
+    // float based row modes
+    @if index($type, float) {
+      ._row._reverse [class*="_col-"] { float: right; }
+      ._row._column [class*="_col-"]  { clear: both; }
+    }
+
+    // column
+    // $_* vars aggregates selectors to avoid duplicate styles (DRYCSS)
+    $_column: unquote('[class*="_col-"]');
+    // columned row mode
+    @if index($rows, columned) {
+      $_column: append($_column, unquote('[class*="_cols-"] > *'), comma);
+      [class*="_cols-"] { list-style:none; }
+    }
+    // render
+    #{$_column} { @include _g($type, _column); }
+  }
+
   // Query classes
   // -------------------------
-  $iscolumn: false; // check if any of query has column set
   @each $name, $val in $map {
     $prefix: __($name, '_', true);
     $s: $set;
@@ -165,7 +191,7 @@
     // 1 key: (params),
     // 2 key: (params) (set),
     // 3 key: (set),
-    @if length($data) >= 3 and type-of(nth($data, 1)) == number { // 1
+    @if length($val) >= 3 and type-of(nth($val, 1)) == number { // 1
       $p: calc-grid(all, nth($val, 1));
     } @else if length(nth($val, 1)) >= 3 and type-of(nth(nth($val, 1),1)) == number { // 2
       $p: calc-grid(all, nth($val, 1));
@@ -174,12 +200,12 @@
     } @else { // 3
       $s: if(nth($val, 1) == add, merge($s, slice($val, 2)), $val);
     }
-  @debug $p;
+    //@debug $p, $s;
+
     @include media($name, $query-map) {
       // Column width
       // --------------------
       @if index($s, column) {
-        $iscolumn: true;
         // gutter mode
         @if index($rows, gutter) {
           // row
@@ -246,32 +272,5 @@
         .#{$prefix}unpull { @include _g($type, column-unpull); }
       }
     }
-  }
-
-  // Base classes
-  // -------------------------
-  @if $iscolumn {
-    // row
-    ._row { @include _g($type, _row); }
-    // gutter row mode
-    @if index($rows, gutter) {
-      ._gutter { position: relative; }
-    }
-    // float based row modes
-    @if index($type, float) {
-      ._row._reverse [class*="_col-"] { float: right; }
-      ._row._column [class*="_col-"]  { clear: both; }
-    }
-
-    // column
-    // $_* vars aggregates selectors to avoid duplicate styles (DRYCSS)
-    $_column: unquote('[class*="_col-"]');
-    // columned row mode
-    @if index($rows, columned) {
-      $_column: append($_column, unquote('[class*="_cols-"] > *'), comma);
-      [class*="_cols-"] { list-style:none; }
-    }
-    // render
-    #{$_column} { @include _g($type, _column); }
   }
 }
